# RPObyWerny

backend/: pom.xml
backend/src/main/java/ru/iu3/backend/auth/: AuthenticationFilter.java  AuthenticationProvider.java  JwtDsl.java  SecurityConfiguration.java
backend/src/main/java/ru/iu3/backend/controllers/: ArtistController.java  CountryController.java  LoginController.java  MuseumController.java  PaintingController.java  UserController.java
backend/src/main/java/ru/iu3/backend/models/: Artist.java  Country.java  Museum.java  Painting.java  User.java
backend/src/main/java/ru/iu3/backend/repositories/: ArtistRepository.java  CountryRepository.java  MuseumRepository.java  PaintingRepository.java  UserRepository.java
backend/src/main/java/ru/iu3/backend/tools/: DataValidationException.java  Utils.java
backend/src/main/resources/: application.properties
fclient/app/: build.gradle
fclient/app/src/main/: AndroidManifest.xml
fclient/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
fclient/app/src/main/java/ru/iu3/fclient/: MainActivity.java  PinpadActivity.java
fclient/app/src/main/res/layout/: activity_main.xml  activity_pinpad.xml
fclient/app/src/main/res/values/: colors.xml  themes.xml
fclient/app/src/main/res/values-night/: themes.xml
fclient/gradle/wrapper/: gradle-wrapper.properties
front/: package-lock.json  package.json
front/src/: App.css  App.js  index.js
front/src/components/: NavigationBar.jsx  PaintingComponent.jsx  SideBar.jsx
front/src/services/: BackendService.jsx
front/src/utils/: Rdx.jsx  Utils.jsx
